--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+s e r v i c e A c c o u n t K e y * . j s o n 
+ 
+ s e r v i c e A c c o u n t K e y * . j s o n 
+ serviceAccountKey*.json
+bfg-*.jar
+ 
