--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,9 +2,9 @@
   "name": "Shhh - WhisperVerse",
   "short_name": "WhisperVerse",
   "description": "Anonymous campus social platform for sharing whispers and connecting with your community.",
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
+  "background_color": "#0ea5e9",
   "theme_color": "#0ea5e9",
   "orientation": "portrait",
   "icons": [
@@ -14,9 +14,25 @@
       "type": "image/png"
     },
     {
+      "src": "/icons/icon-256.png",
+      "sizes": "256x256",
+      "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-384.png",
+      "sizes": "384x384",
+      "type": "image/png"
+    },
+    {
       "src": "/icons/icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/icons/icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
