--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,8 @@
     "helmet": "^7.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.4",
+    "qrcode": "^1.5.4",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
