--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "test": "echo \"No tests specified\""
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -22,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.4",
     "qrcode": "^1.5.4",
+    "socket.io": "^4.8.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.1"
