feat/security-backup-passhash (v1.2): implement comprehensive security and resilience patch

--- a/backend/env.example
+++ b/backend/env.example
@@ -3,7 +3,9 @@ PORT=3001
 JWT_SECRET=your-super-secret-jwt-key-here
 ADMIN_USERNAME=admin
 ADMIN_PASSWORD=aangan-secret
+ADMIN_PASS_HASH=$2a$10$your-bcrypt-hash-here
 ADMIN_API_KEY=changeme
+SOCKET_SHARED_KEY=superSecretSocketKey
 
 # Database
 DB_PATH=/data/whispers.db
