Security: Complete mediation implementation with short-lived JWTs, refresh tokens, WebSocket re-auth, and fail-safe defaults

--- a/backend/env.example
+++ b/backend/env.example
@@ -7,8 +7,11 @@ ADMIN_PASS_HASH=$2a$10$your-bcrypt-hash-here
 ADMIN_API_KEY=changeme
 SOCKET_SHARED_KEY=superSecretSocketKey
 
-# Database
-DB_PATH=/data/whispers.db
+# PostgreSQL connection string (used in production)
+DATABASE_URL=
+
+# SQLite DB path (used in local/dev)
+DB_PATH=backend/whispers.db
 
 # Redis (optional - for heartbeat and counters)
 REDIS_URL=redis://localhost:6379
