--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite_react_shadcn_ts",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.6.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,11 +9,24 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
+    "test:security": "npm audit --audit-level moderate",
+    "test:performance": "npm run build && npx lighthouse http://localhost:8080 --output=json --output-path=./lighthouse-report.json",
+    "typecheck": "tsc --noEmit",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "maintenance": "node scripts/maintenance.js",
+    "maintenance:security": "node scripts/maintenance.js --security",
+    "maintenance:performance": "node scripts/maintenance.js --performance",
+    "maintenance:quality": "node scripts/maintenance.js --quality",
+    "maintenance:cleanup": "node scripts/maintenance.js --cleanup",
+    "maintenance:update": "node scripts/maintenance.js --update",
+    "analyze": "npm run build && npx vite-bundle-analyzer dist",
+    "clean": "rm -rf dist dev-dist coverage .vite node_modules/.cache",
+    "clean:deep": "rm -rf dist dev-dist coverage .vite node_modules backend/node_modules && npm install"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
@@ -21,10 +34,6 @@
     ]
   },
   "dependencies": {
-    "@capacitor/android": "^7.4.0",
-    "@capacitor/cli": "^7.4.0",
-    "@capacitor/core": "^7.4.0",
-    "@capacitor/ios": "^7.4.0",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
@@ -53,24 +62,19 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
-    "@supabase/supabase-js": "^2.50.0",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.56.2",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
-    "compression": "^1.8.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "firebase": "^11.9.1",
-    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.18.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
-    "node-fetch": "^3.3.2",
-    "nodemailer": "^7.0.3",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
@@ -80,7 +84,6 @@
     "recharts": "^2.12.7",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
-    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
