docs: update context/provider structure for Fast Refresh compliance and best practices

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev:railway": "VITE_API_URL=https://aangan-production.up.railway.app/api VITE_REALTIME_URL=https://aangan-production.up.railway.app vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "eslint frontend/src backend/src",
+    "lint:fix": "eslint frontend/src backend/src --fix",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:coverage": "vitest run --coverage",
