--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
+    "react-window": "^1.8.11",
     "recharts": "^2.12.7",
     "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
