--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "jsx": "react-jsx",
     "types": ["@testing-library/jest-dom", "jest"],
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "outDir": "dist"
+    "outDir": "dist",
+    "strict": true
   },
   "include": [
     "frontend/src/**/*",
