--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
-    "vite": "^5.4.19",
-    "@vitejs/plugin-react-swc": "^3.6.0"
+    "@vitejs/plugin-react-swc": "^3.6.0",
+    "vite": "^5.4.19"
   }
-} 
+}
