--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-swc": "^3.6.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3",
     "vite": "^5.4.19"
   }
 }
