--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-pwa": "^1.0.2"
   }
 }
