chore: update configuration files and add workflow

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,17 +9,21 @@
       "@lib/*": ["frontend/lib/*"],
       "@theme": ["frontend/theme/theme.ts"]
     },
-    "noImplicitAny": false,
-    "noUnusedParameters": false,
-    "skipLibCheck": true,
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "strictBindCallApply": true,
+    "strictPropertyInitialization": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "skipLibCheck": false,
     "allowJs": false,
-    "noUnusedLocals": false,
-    "strictNullChecks": false,
     "esModuleInterop": true,
     "jsx": "react-jsx",
     "types": ["@testing-library/jest-dom", "jest"],
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
-    "outDir": "dist",
     "strict": true
   },
   "include": [
