--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
     "nodemon": "^3.0.2",
     "sqlite3": "^5.1.7",
