--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,69 +2,74 @@
   "name": "college-whisper-frontend",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "analyze": "cross-env REPORT=true vite build",
-    "preview:analyze": "npx serve -s dist",
-    "profile": "cross-env PROFILE=true vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "typecheck": "tsc --noEmit",
     "test": "vitest",
-    "test:coverage": "vitest run --coverage",
-    "test:ui": "vitest --ui",
-    "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
-    "test-storybook": "test-storybook",
-    "chromatic": "chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "^5.56.2",
-    "axios": "^1.11.0",
+    "axios": "^1.7.9",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.18.1",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^12.0.6",
+    "lucide-react": "^0.534.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "web-vitals": "^5.0.3",
+    "workbox-cacheable-response": "^7.3.0",
+    "workbox-core": "^7.3.0",
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@types/react-window": "^1.8.8",
-    "@typescript-eslint/eslint-plugin": "^8.38.0",
-    "@typescript-eslint/parser": "^8.38.0",
-    "@vitejs/plugin-react": "^4.7.0",
-    "@vitejs/plugin-react-swc": "^3.6.0",
-    "cross-env": "^10.0.0",
-    "eslint": "^9.32.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "lovable-tagger": "^1.0.0",
-    "rollup-plugin-visualizer": "^6.0.3",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
     "@chromatic-com/storybook": "^3.0.9",
-    "@storybook/addon-a11y": "^8.2.1",
-    "@storybook/addon-essentials": "^8.2.1",
-    "@storybook/addon-interactions": "^8.2.1",
-    "@storybook/addon-links": "^8.2.1",
-    "@storybook/blocks": "^8.2.1",
-    "@storybook/jest": "^0.2.9",
-    "@storybook/react": "^8.2.1",
-    "@storybook/react-vite": "^8.2.1",
-    "@storybook/test": "^8.2.1",
-    "@storybook/test-runner": "^1.0.0",
-    "@storybook/testing-library": "^0.2.5",
-    "chromatic": "^11.18.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@storybook/addon-a11y": "^7.6.17",
+    "@storybook/addon-essentials": "^7.6.17",
+    "@storybook/addon-interactions": "^7.6.17",
+    "@storybook/addon-links": "^7.6.17",
+    "@storybook/blocks": "^7.6.17",
+    "@storybook/react": "^7.6.17",
+    "@storybook/react-vite": "^7.6.17",
+    "@storybook/test": "^7.6.17",
+    "@storybook/test-runner": "^0.16.0",
+    "@storybook/testing-library": "^0.2.2",
+    "@types/find-cache-dir": "^3.2.1",
+    "@types/mdx": "^2.0.13",
+    "@types/node": "^20.19.9",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-window": "^1.8.8",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-react": "^4.7.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "chromatic": "^11.8.3",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
+    "lovable-tagger": "^1.0.0",
+    "rollup-plugin-visualizer": "^5.14.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3",
     "vite": "^5.4.19",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-html": "^3.2.2",
-    "vite-plugin-pwa": "^1.0.2"
+    "vite-plugin-html": "^3.2.0",
+    "vite-plugin-pwa": "^0.17.4",
+    "vitest": "^3.2.4"
   }
 }
