--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,11 +25,18 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
+    "typeRoots": [
+      "./node_modules/@types",
+      "./src/types"
+    ],
     "paths": {
       "@/*": ["./src/*"]
     },
     "types": ["vite/client", "vite-plugin-pwa/client"]
   },
-  "include": ["src"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": [
+    "src",
+    "**/*.d.ts"
+  ],
+  "exclude": ["node_modules"]
 }
