--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,8 @@
     "seed": "knex seed:run --knexfile backend/knexfile.js"
   },
   "dependencies": {
+    "@sentry/node": "^8.15.0",
+    "@sentry/tracing": "^8.15.0",
     "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
@@ -24,24 +26,32 @@
     "express-rate-limit": "^8.0.1",
     "firebase-admin": "^13.4.0",
     "helmet": "^8.1.0",
+    "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "nodemailer": "^7.0.5",
     "pg": "^8.11.3",
     "postgres": "^3.4.3",
+    "prom-client": "^15.1.7",
     "qrcode": "^1.5.4",
     "socket.io": "^4.8.1",
     "sqlite": "^5.1.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "uuid": "^11.1.0",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
+    "@sentry/cli": "^2.30.0",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.0.0",
     "@types/supertest": "^6.0.3",
     "cross-env": "^7.0.3",
     "nodemon": "^3.0.2",
     "sqlite3": "^5.1.7",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "shhh",
