--- a/.env.example
+++ b/.env.example
@@ -1,37 +1,155 @@
-# API Configuration
-VITE_API_URL=your_api_url_here
+###########################################
+#              ENVIRONMENT                #
+###########################################
 
-# Supabase Configuration
-SUPABASE_URL=your_supabase_url_here
-SUPABASE_SERVICE_KEY=your_supabase_service_key_here
-
-# Email Configuration (SMTP)
-SMTP_USER=your_smtp_username_here
-SMTP_PASS=your_smtp_password_here
-
-# API Keys
-GEMINI_API_KEY=your_gemini_api_key_here
-
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_here
-JWT_EXPIRES_IN=30d
-
-# Database Configuration
-DATABASE_URL=your_database_url_here
-DB_PATH=./whispers.db
-
-# Environment
+# Application Environment
+# Options: development, production, test
 NODE_ENV=development
 
 # Port Configuration
 PORT=3001
 
-# CORS Configuration
-CORS_ORIGIN=http://localhost:5173
+# Application URL (used for generating absolute URLs)
+APP_URL=http://localhost:3001
+
+# Admin Configuration
+ADMIN_USERNAME=admin
+ADMIN_PASSWORD=changeme
+ADMIN_EMAIL=admin@example.com
+ADMIN_API_KEY=your_secure_admin_api_key_here
+
+###########################################
+#              DATABASE                   #
+###########################################
+
+# Database Connection (PostgreSQL for production, SQLite for development)
+DATABASE_URL=postgresql://user:password@localhost:5432/college_whisper
+DB_PATH=./whispers.db  # Only used in development with SQLite
+
+# Database Pool Configuration
+DB_POOL_MIN=2
+DB_POOL_MAX=10
+DB_SSL=false  # Set to true in production with SSL
+
+###########################################
+#          AUTHENTICATION                 #
+###########################################
+
+# JWT Configuration
+JWT_SECRET=your_secure_jwt_secret_key_here
+JWT_EXPIRES_IN=30d
+JWT_REFRESH_SECRET=your_secure_refresh_token_secret_here
+JWT_REFRESH_EXPIRES_IN=7d
 
 # Session Configuration
-SESSION_SECRET=your_session_secret_here
+SESSION_SECRET=your_secure_session_secret_here
+SESSION_COOKIE_NAME=college_whisper_sid
+SESSION_COOKIE_SECURE=false  # Set to true in production with HTTPS
+SESSION_COOKIE_HTTPONLY=true
+SESSION_COOKIE_MAX_AGE=86400000  # 1 day in ms
+
+# OAuth Configuration (if applicable)
+GOOGLE_CLIENT_ID=your_google_client_id_here
+GOOGLE_CLIENT_SECRET=your_google_client_secret_here
+
+###########################################
+#            FRONTEND                     #
+###########################################
+
+# Frontend URL (for CORS and redirects)
+FRONTEND_URL=http://localhost:5173
+VITE_APP_DOMAIN=localhost
+VITE_APP_URL=http://localhost:5173
+VITE_API_URL=http://localhost:3001/api
+VITE_TWITTER_HANDLE=@CollegeWhisper
+VITE_ENABLE_ANALYTICS=false
+
+###########################################
+#            SECURITY                     #
+###########################################
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
 RATE_LIMIT_MAX=100  # Max requests per window per IP
+
+# WebSocket Security
+SOCKET_SHARED_KEY=your_secure_socket_shared_key_here
+SOCKET_PING_INTERVAL=25000  # 25 seconds
+SOCKET_PING_TIMEOUT=10000   # 10 seconds
+
+# CORS Configuration
+CORS_ORIGIN=http://localhost:5173,https://college-whisper.vercel.app
+
+# Security Headers
+CONTENT_SECURITY_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval';
+X_FRAME_OPTIONS=DENY
+X_CONTENT_TYPE_OPTIONS=nosniff
+X_XSS_PROTECTION=1; mode=block
+
+###########################################
+#            EMAIL/SMTP                   #
+###########################################
+
+# Email Configuration
+SMTP_HOST=smtp.example.com
+SMTP_PORT=587
+SMTP_SECURE=false  # true for 465, false for other ports
+SMTP_USER=your_smtp_username_here
+SMTP_PASS=your_smtp_password_here
+EMAIL_FROM=noreply@example.com
+EMAIL_FROM_NAME="College Whisper"
+
+###########################################
+#            AI & INTEGRATIONS            #
+###########################################
+
+# AI/ML Services
+GEMINI_API_KEY=your_gemini_api_key_here
+OPENAI_API_KEY=your_openai_api_key_here
+
+# Sentry for Error Tracking
+SENTRY_DSN=your_sentry_dsn_here
+SENTRY_ENVIRONMENT=development
+
+# Logging
+LOG_LEVEL=info  # error, warn, info, debug
+LOG_TO_FILE=true
+LOG_FILE_PATH=./logs/app.log
+
+###########################################
+#            MISCELLANEOUS                #
+###########################################
+
+# Feature Flags
+ENABLE_AI_WHISPERS=true
+ENABLE_EMAIL_VERIFICATION=false
+ENABLE_RATE_LIMITING=true
+
+# Cache Configuration
+REDIS_URL=redis://localhost:6379
+CACHE_TTL=3600  # 1 hour in seconds
+
+# File Uploads
+MAX_UPLOAD_SIZE=5242880  # 5MB in bytes
+UPLOAD_PATH=./uploads
+
+# API Documentation
+API_DOCS_PATH=/api-docs
+
+# WebSocket Configuration
+WS_PATH=/socket.io
+WS_MAX_PAYLOAD=1e6  # 1MB max payload size
+
+# Admin Dashboard
+ADMIN_DASHBOARD_PATH=/admin
+
+# Maintenance Mode
+MAINTENANCE_MODE=false
+MAINTENANCE_MESSAGE=We're currently performing maintenance. Please check back soon.
+
+# Debug Mode (for development)
+DEBUG=app:*,api:*,socket:*
+
+# Note: Never commit actual secrets to version control.
+# This is just an example file. Always keep your .env file private.
+# In production, use a secure secret management solution.
