--- a/package.json
+++ b/package.json
@@ -15,20 +15,32 @@
     "test:coverage": "vitest run --coverage",
     "test:security": "npm audit --audit-level moderate",
     "test:performance": "npm run build && npx lighthouse http://localhost:8080 --output=json --output-path=./lighthouse-report.json",
+    "test:endpoints": "node scripts/test/test-all-endpoints.js",
+    "test:realtime": "node scripts/test/test-realtime-system.js",
+    "test:email": "node scripts/test/test-email.cjs",
+    "test:fcm": "node scripts/test/test-fcm-push.js",
+    "test:login": "node scripts/test/test-login.js",
     "typecheck": "tsc --noEmit",
     "preview": "vite preview",
     "prepare": "husky install",
-    "maintenance": "node scripts/maintenance.js",
-    "maintenance:security": "node scripts/maintenance.js --security",
-    "maintenance:performance": "node scripts/maintenance.js --performance",
-    "maintenance:quality": "node scripts/maintenance.js --quality",
-    "maintenance:cleanup": "node scripts/maintenance.js --cleanup",
-    "maintenance:update": "node scripts/maintenance.js --update",
+    "maintenance": "node scripts/maintenance/maintenance.js",
+    "maintenance:security": "node scripts/maintenance/maintenance.js --security",
+    "maintenance:performance": "node scripts/maintenance/maintenance.js --performance",
+    "maintenance:quality": "node scripts/maintenance/maintenance.js --quality",
+    "maintenance:cleanup": "node scripts/maintenance/maintenance.js --cleanup",
+    "maintenance:update": "node scripts/maintenance/maintenance.js --update",
+    "backup:db": "node scripts/maintenance/backup-db.js",
+    "rotate:credentials": "node scripts/maintenance/rotate-credentials.js",
     "analyze": "npm run build && npx vite-bundle-analyzer dist",
-    "clean": "rm -rf dist dev-dist coverage .vite node_modules/.cache",
-    "clean:deep": "rm -rf dist dev-dist coverage .vite node_modules backend/node_modules && npm install",
+    "clean": "node scripts/deploy/clean-build.ps1",
+    "clean:deep": "node scripts/deploy/clean-build.ps1 --deep",
     "dev:backend": "cd backend && npm install && npm run dev",
-    "start-all": "cd backend && npm install && npm run dev & cd .. && npm run dev"
+    "start-all": "cd backend && npm install && npm run dev & cd .. && npm run dev",
+    "dev:update": "node scripts/dev/git-update.sh",
+    "dev:seed-ai": "node scripts/dev/seed-ai-whispers.js",
+    "dev:analytics": "node scripts/dev/send-analytics-summary.cjs",
+    "dev:gemini": "node scripts/dev/apply-gemini-output.js",
+    "dev:gemini-auto": "node scripts/dev/automate-gemini.ps1"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
