--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,13 +17,18 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-toast": "^1.2.14",
     "@tanstack/react-query": "^5.56.2",
+    "@types/jwt-decode": "^2.2.1",
+    "@zxcvbn-ts/core": "^3.0.4",
+    "@zxcvbn-ts/language-common": "^3.0.4",
     "axios": "^1.7.9",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.0.6",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.534.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
     "web-vitals": "^5.0.3",
     "workbox-cacheable-response": "^7.3.0",
