--- a/.env.example
+++ b/.env.example
@@ -23,7 +23,7 @@ ADMIN_API_KEY=your_secure_admin_api_key_here
 ###########################################
 
 # Database Connection (PostgreSQL for production, SQLite for development)
-DATABASE_URL=postgresql://user:password@localhost:5432/college_whisper
+DATABASE_URL=postgresql://user:password@localhost:5432/aangan
 DB_PATH=./whispers.db  # Only used in development with SQLite
 
 # Database Pool Configuration
@@ -43,7 +43,7 @@ JWT_REFRESH_EXPIRES_IN=7d
 
 # Session Configuration
 SESSION_SECRET=your_secure_session_secret_here
-SESSION_COOKIE_NAME=college_whisper_sid
+SESSION_COOKIE_NAME=aangan_sid
 SESSION_COOKIE_SECURE=false  # Set to true in production with HTTPS
 SESSION_COOKIE_HTTPONLY=true
 SESSION_COOKIE_MAX_AGE=86400000  # 1 day in ms
@@ -61,7 +61,7 @@ FRONTEND_URL=http://localhost:5173
 VITE_APP_DOMAIN=localhost
 VITE_APP_URL=http://localhost:5173
 VITE_API_URL=http://localhost:3001/api
-VITE_TWITTER_HANDLE=@CollegeWhisper
+VITE_TWITTER_HANDLE=@AanganApp
 VITE_ENABLE_ANALYTICS=false
 
 ###########################################
@@ -78,7 +78,7 @@ SOCKET_PING_INTERVAL=25000  # 25 seconds
 SOCKET_PING_TIMEOUT=10000   # 10 seconds
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:5173,https://college-whisper.vercel.app
+CORS_ORIGIN=http://localhost:5173,https://aangan.vercel.app
 
 # Security Headers
 CONTENT_SECURITY_POLICY=default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval';
