--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "college-whisper-frontend",
+  "name": "aangan-frontend",
   "version": "1.0.0",
   "private": true,
   "type": "module",
+  "description": "Frontend for Aangan - A real-time, emotionally intelligent campus platform",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -21,6 +22,7 @@
     "@zxcvbn-ts/core": "^3.0.4",
     "@zxcvbn-ts/language-common": "^3.0.4",
     "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^12.0.6",
@@ -30,6 +32,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^3.3.1",
     "web-vitals": "^5.0.3",
     "workbox-cacheable-response": "^7.3.0",
     "workbox-core": "^7.3.0",
@@ -52,11 +55,13 @@
     "@storybook/test": "^7.6.17",
     "@storybook/test-runner": "^0.16.0",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
     "@types/find-cache-dir": "^3.2.1",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.19.9",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -67,6 +72,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^26.1.0",
     "lovable-tagger": "^1.0.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "ts-node": "^10.9.2",
