--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
+    "@vitejs/plugin-basic-ssl": "^2.1.0",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "chromatic": "^11.8.3",
@@ -80,6 +81,7 @@
     "vite": "^5.4.19",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.0",
+    "vite-plugin-image-optimizer": "^2.0.2",
     "vite-plugin-pwa": "^0.17.4",
     "vitest": "^3.2.4"
   }
