--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "firebase": "^11.9.1",
     "framer-motion": "^12.18.1",
     "input-otp": "^1.2.4",
+    "knex": "^3.1.0",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
@@ -103,6 +104,7 @@
     "remark-gfm": "^4.0.1",
     "socket.io-client": "^4.8.1",
     "sonner": "^1.5.0",
+    "sqlite3": "^5.1.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
