--- a/.github/workflows/quality-gate.yml
+++ b/.github/workflows/quality-gate.yml
@@ -4,51 +4,108 @@ on:
   push:
     branches: [main, develop]
 
+env:
+  NODE_VERSION: '22'
+  FORCE_COLOR: 1
+
 jobs:
   quality-checks:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
+    
+    strategy:
+      fail-fast: true
+      matrix:
+        workspace: [backend, frontend]
+        
     steps:
-      - uses: actions/checkout@v4
-        
-      - uses: actions/setup-node@v4
-        with: 
-          node-version: '22'
-          
-      - name: Cache dependencies
-        uses: actions/cache@v3
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
         with:
-          path: |
-            ~/.npm
-            node_modules
-            backend/node_modules
-            frontend/node_modules
-          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-node-
-            
-      - name: Install root dependencies
-        run: npm ci || echo "No root package.json"
+          fetch-depth: 0
         
-      - name: Backend Quality Checks
-        run: |
-          cd backend
-          npm ci
-          npm run type-check
-          npx eslint . --max-warnings 0 || echo "ESLint warnings present"
-        
-      - name: Frontend Quality Checks
-        run: |
-          cd frontend
-          npm ci
-          npm run typecheck
-          npm run build
-          npm run lint || echo "ESLint warnings present"
+      - name: 📦 Setup Node.js
+        uses: actions/setup-node@v4
+        with: 
+          node-version: ${{ env.NODE_VERSION }}
+          cache: 'npm'
+          cache-dependency-path: '${{ matrix.workspace }}/package-lock.json'
           
-      - name: Report Status
-        if: always()
+      - name: 🔧 Install dependencies
+        working-directory: ${{ matrix.workspace }}
         run: |
-          echo "✅ Quality gate checks completed"
-          echo "Backend TypeScript: PASSED"
-          echo "Frontend TypeScript: PASSED" 
-          echo "Frontend Build: PASSED"
-          echo "Note: Some ESLint warnings may be present but don't block deployment"
+          npm ci --prefer-offline --no-audit --no-progress
+        
+      - name: 🔍 TypeScript Strict Check
+        working-directory: ${{ matrix.workspace }}
+        run: |
+          echo "🔍 Running strict TypeScript checks..."
+          npm run typecheck || npm run type-check
+          echo "✅ TypeScript check passed with ZERO errors!"
+        
+      - name: 📏 ESLint Strict Check  
+        working-directory: ${{ matrix.workspace }}
+        run: |
+          echo "📏 Running ESLint with ZERO warnings policy..."
+          npm run lint
+          echo "✅ ESLint passed with ZERO warnings!"
+          
+      - name: 🧪 Run Tests
+        working-directory: ${{ matrix.workspace }}
+        run: |
+          if [ -f "package.json" ] && npm run | grep -q "test"; then
+            echo "🧪 Running tests..."
+            npm test
+            echo "✅ All tests passed!"
+          else
+            echo "⚠️ No test script found in ${{ matrix.workspace }}"
+          fi
+          
+      - name: 🏗️ Build Check
+        working-directory: ${{ matrix.workspace }}
+        run: |
+          if [ -f "package.json" ] && npm run | grep -q "build"; then
+            echo "🏗️ Testing build..."
+            npm run build
+            echo "✅ Build successful!"
+          else
+            echo "⚠️ No build script found in ${{ matrix.workspace }}"
+          fi
+
+  security-audit:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    needs: quality-checks
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 📦 Setup Node.js
+        uses: actions/setup-node@v4
+        with: 
+          node-version: ${{ env.NODE_VERSION }}
+          
+      - name: 🔒 Security Audit
+        run: |
+          echo "🔒 Running security audit..."
+          cd backend && npm audit --audit-level=moderate
+          cd ../frontend && npm audit --audit-level=moderate
+          echo "✅ Security audit passed!"
+          
+  integration-ready:
+    runs-on: ubuntu-latest
+    needs: [quality-checks, security-audit]
+    if: success()
+    
+    steps:
+      - name: 🎉 Quality Gate PASSED
+        run: |
+          echo "🎉 ALL QUALITY GATES PASSED!"
+          echo "✅ TypeScript: ZERO errors"
+          echo "✅ ESLint: ZERO warnings"  
+          echo "✅ Tests: ALL passing"
+          echo "✅ Build: Successful"
+          echo "✅ Security: No vulnerabilities"
+          echo ""
+          echo "🚀 Ready for staging deployment!"
