--- a/package.json
+++ b/package.json
@@ -53,9 +53,53 @@
     "pre-deploy:staging": "npm run validate:staging && echo 'Ready for staging deployment!'"
   },
   "lint-staged": {
-    "*.{ts,tsx}": [
-      "eslint --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix --max-warnings=0",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
     ]
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.9.0",
+    "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^22.5.5",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "^3.2.4",
+    "autoprefixer": "^10.4.20",
+    "barrelsby": "^2.8.1",
+    "cross-env": "^10.0.0",
+    "depcheck": "^1.4.7",
+    "eslint": "^9.9.0",
+    "eslint-plugin-boundaries": "^5.0.1",
+    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "globals": "^15.9.0",
+    "husky": "^8.0.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^30.0.4",
+    "jest-environment-jsdom": "^30.0.4",
+    "jsdom": "^26.1.0",
+    "lint-staged": "^16.1.2",
+    "lovable-tagger": "^1.1.7",
+    "postcss": "^8.4.47",
+    "socket.io-client": "^4.8.1",
+    "supertest": "^7.1.4",
+    "tailwindcss": "^3.4.11",
+    "ts-jest": "^29.4.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^1.0.0",
+    "vitest": "^3.2.4"
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
@@ -120,45 +164,5 @@
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-html": "^3.2.2",
     "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.9.0",
-    "@tailwindcss/typography": "^0.5.15",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
-    "@types/jest": "^30.0.0",
-    "@types/node": "^22.5.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/ui": "^3.2.4",
-    "autoprefixer": "^10.4.20",
-    "barrelsby": "^2.8.1",
-    "cross-env": "^10.0.0",
-    "depcheck": "^1.4.7",
-    "eslint": "^9.9.0",
-    "eslint-plugin-boundaries": "^5.0.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
-    "globals": "^15.9.0",
-    "husky": "^8.0.0",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^30.0.4",
-    "jest-environment-jsdom": "^30.0.4",
-    "jsdom": "^26.1.0",
-    "lint-staged": "^16.1.2",
-    "lovable-tagger": "^1.1.7",
-    "postcss": "^8.4.47",
-    "socket.io-client": "^4.8.1",
-    "supertest": "^7.1.4",
-    "tailwindcss": "^3.4.11",
-    "ts-jest": "^29.4.0",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
-    "vite-plugin-pwa": "^1.0.0",
-    "vitest": "^1.6.1"
   }
 }
