--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,12 @@
     "test": "vitest",
     "test:coverage": "vitest run --coverage"
   },
+  "overrides": {
+    "esbuild": "^0.25.0"
+  },
+  "resolutions": {
+    "esbuild": "^0.25.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -81,6 +87,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "jsdom": "^26.1.0",
     "lovable-tagger": "^1.0.0",
+    "esbuild": "^0.25.0",
     "rollup-plugin-visualizer": "^5.14.0",
     "sonner": "^2.0.7",
     "ts-node": "^10.9.2",
