--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "dev:railway": "VITE_API_URL=https://aangan-production.up.railway.app/api VITE_REALTIME_URL=https://aangan-production.up.railway.app vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "preview": "vite preview",
+    "prepare": "husky install",
     "lint": "eslint . --max-warnings=0",
     "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
+    "typecheck": "tsc --noEmit -p tsconfig.check.json",
+    "typecheck:watch": "tsc --noEmit -w -p tsconfig.check.json",
+    "validate": "npm run lint && npm run typecheck && npm run build",
+    "precommit": "lint-staged",
     "test": "vitest run -c vite.config.test.js",
     "test:watch": "vitest -c vite.config.test.js",
     "test:coverage": "vitest run --coverage -c vite.config.test.js",
@@ -23,9 +30,6 @@
     "test:email": "node scripts/test/test-email.cjs",
     "test:fcm": "node scripts/test/test-fcm-push.js",
     "test:login": "node scripts/test/test-login.js",
-    "typecheck": "tsc --noEmit -p tsconfig.check.json",
-    "preview": "vite preview",
-    "prepare": "husky install",
     "maintenance": "node scripts/maintenance/maintenance.js",
     "maintenance:security": "node scripts/maintenance/maintenance.js --security",
     "maintenance:performance": "node scripts/maintenance/maintenance.js --performance",
@@ -52,15 +56,6 @@
     "validate:staging": "node scripts/validate-staging-readiness.js",
     "pre-deploy:staging": "npm run validate:staging && echo 'Ready for staging deployment!'"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix --max-warnings=0",
-      "prettier --write"
-    ],
-    "*.{json,md,yml,yaml}": [
-      "prettier --write"
-    ]
-  },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
     "@tailwindcss/typography": "^0.5.15",
@@ -77,18 +72,19 @@
     "barrelsby": "^2.8.1",
     "cross-env": "^10.0.0",
     "depcheck": "^1.4.7",
+    "esbuild": "^0.25.0",
     "eslint": "^9.9.0",
     "eslint-plugin-boundaries": "^5.0.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
     "globals": "^15.9.0",
-    "husky": "^8.0.0",
+    "husky": "^8.0.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
     "jsdom": "^26.1.0",
-    "lint-staged": "^16.1.2",
-    "lovable-tagger": "^1.1.7",
+    "lint-staged": "^16.1.5",
+    "lovable-tagger": "^1.1.9",
     "postcss": "^8.4.47",
     "socket.io-client": "^4.8.1",
     "supertest": "^7.1.4",
@@ -101,7 +97,23 @@
     "vite-plugin-pwa": "^1.0.0",
     "vitest": "^3.2.4"
   },
+  "overrides": {
+    "esbuild": "^0.25.0"
+  },
+  "resolutions": {
+    "esbuild": "^0.25.0"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
+  },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
@@ -132,7 +144,8 @@
     "@radix-ui/react-toggle-group": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.4",
     "@tailwindcss/forms": "^0.5.10",
-    "@tanstack/react-query": "^5.56.2",
+    "@tanstack/react-query": "^5.85.3",
+    "antd": "^5.27.0",
     "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
